--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,5 @@ all = { level = "warn", priority = -1 }
 pedantic = { level = "warn", priority = -1 }
 unwrap_used = "deny"
 expect_used = "warn"
+cast_lossless = "allow"
+cast_possible_truncation = "allow"
