--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = [ "crates/mb8","crates/mb8-isa" , "crates/mb8a" ]
+members = [ "crates/mb8", "crates/mb8-isa" ]
 resolver = "2"
 
 [workspace.package]
