feat: update memory addressing model (#4)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,5 @@ unwrap_used = "deny"
 expect_used = "warn"
 cast_lossless = "allow"
 cast_possible_truncation = "allow"
+cast_possible_wrap = "allow"
+cast_sign_loss = "allow"
