--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -27,7 +27,7 @@ jobs:
           path: ~/.cargo/bin
           key: ${{ runner.os }}-cargo-tools-v1
       - name: Install customasm
-        run: cargo install customasm --locked
+        run: cargo install --git https://github.com/hlorenzi/customasm
       - name: Compile asm
         run: make
       # - name: Install cargo-binstall
