--- a/crates/mb8c/Cargo.toml
+++ b/crates/mb8c/Cargo.toml
@@ -5,6 +5,8 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
+chumsky = { version = "0.11.2" }
+logos = { version = "0.16.0" }
 mb8-isa = { path = "../mb8-isa" }
 
 [lints]
