feat: refactor compiler (#68)

--- a/crates/mb8c/Cargo.toml
+++ b/crates/mb8c/Cargo.toml
@@ -5,6 +5,7 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
+ariadne = { version = "0.6.0" }
 chumsky = { version = "0.11.2" }
 logos = { version = "0.16.0" }
 mb8-isa = { path = "../mb8-isa" }
