--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -5,6 +5,7 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
+ariadne = { version = "0.6.0" }
 clap = { version = "4.5.51", features = ["derive"] }
 minifb = "0.28.0"
 
