--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -10,17 +10,17 @@ crate-type = ["rlib"]
 [features]
 default = ["desktop"]
 desktop = ["dep:clap"]
-wasm = ["dep:wasm-bindgen", "dep:web-sys"]
+wasm = ["dep:wasm-bindgen", "dep:web-sys", "dep:console_error_panic_hook"]
 
 [[bin]]
 name = "cli-desktop"
 path = "src/bin/desktop.rs"
 required-features = ["desktop"]
 
-[[bin]]
-name = "cli-wasm"
-path = "src/bin/wasm.rs"
-required-features = ["wasm"]
+#[[bin]]
+#name = "cli-wasm"
+#path = "src/wasm.rs"
+#required-features = ["wasm"]
 
 [dependencies]
 clap = { version = "4.5.51", features = ["derive"], optional = true }
@@ -32,6 +32,7 @@ mb8c = { path = "../mb8c" }
 # WASM
 wasm-bindgen = { version = "0.2", optional = true }
 web-sys = { version = "0.3", optional = true }
+console_error_panic_hook = { version = "0.1.7", optional = true }
 
 [dev-dependencies]
 tempfile = "3.23.0"
